--- a/css/media.css
+++ b/css/media.css
@@ -60,6 +60,10 @@
     );
   }
 
+  .btn {
+    min-width: 135px;
+  }
+
   /** FOOTER **/
   /* #region */
   .footer-wrapper {
